KE-2024/Outlook changes made For Subscription create method and put some logger and documentation